認証機能、ユーザー登録を追加/管理画面追加

--- a/TODO
+++ b/TODO
@@ -1,16 +1,23 @@
 HeaderLayoutを追加する　１５分
 →2024年10月23日
 
+認証機能の追加　１２０分
+→2024年10月24日
+→マイグレーションファイルを編集しroleカラムを追加
+→コントローラーとルートのみ編集し、UIは変えていない
+
 登録処理の追加　１２０分
+
+ユーザーに紐づいたデータをテーブルで一覧表示　１２０分
 
 更新処理の追加　６０分
 
 削除処理の追加　６０分
-
-認証機能の追加　１２０分
 
 Input　Select などをコンポーネント化する　１２０分
 
 レイアウト変更　入力位置を揃える　６０分
 
 SPA化　１２０分
+
+デプロイ　６０分
