--- a/TODO
+++ b/TODO
@@ -1,14 +1,12 @@
-HeaderLayoutを追加する　１５分
-→2024年10月23日
+; HeaderLayoutを追加する　１５分
+; →2024年10月23日
 
-認証機能の追加　１２０分
-→2024年10月24日
-→マイグレーションファイルを編集しroleカラムを追加
-→コントローラーとルートのみ編集し、UIは変えていない
+; 認証機能の追加　１２０分
+; →2024年10月24日
+; →マイグレーションファイルを編集しroleカラムを追加
+; →コントローラーとルートのみ編集し、UIは変えていない
 
-登録処理の追加　１２０分
-
-ユーザーに紐づいたデータをテーブルで一覧表示　１２０分
+登録処理の追加、ユーザーに紐づいたデータをテーブルで一覧表示　１２０分
 
 更新処理の追加　６０分
 
