--- a/TODO
+++ b/TODO
@@ -6,13 +6,17 @@
 ; →マイグレーションファイルを編集しroleカラムを追加
 ; →コントローラーとルートのみ編集し、UIは変えていない
 
-登録処理の追加、ユーザーに紐づいたデータをテーブルで一覧表示　１２０分
+; 登録処理の追加、ユーザーに紐づいたデータをテーブルで一覧表示　１２０分
+; →2024年10月26日
 
-更新処理の追加　６０分
-
-削除処理の追加　６０分
+; 削除処理の追加、確認alert　６０分
+; →2024年10月26日
 
 Input　Select などをコンポーネント化する　１２０分
+
+ページャー追加
+
+検索機能追加
 
 レイアウト変更　入力位置を揃える　６０分
 
