ページャー追加/レイアウト大幅修正

--- a/TODO
+++ b/TODO
@@ -1,3 +1,20 @@
+テーブルが文字数で崩れないように編集
+
+レスポンシブ対応
+
+Tax.jsxのレイアウト調整
+
+検索機能追加
+
+404画面の追加
+
+レイアウト変更　入力位置を揃える　６０分
+
+SPA化　１２０分
+
+デプロイ　６０分
+
+
 ; HeaderLayoutを追加する　１５分
 ; →2024年10月23日
 
@@ -12,16 +29,10 @@
 ; 削除処理の追加、確認alert　６０分
 ; →2024年10月26日
 
-Input　Select などをコンポーネント化する　１２０分
+; Input　Select などをコンポーネント化する　１２０分
+; →2024年10月26日
 
-ページャー追加
+; ページャー追加
+; →2024年10月26日
 
-検索機能追加
 
-404画面の追加
-
-レイアウト変更　入力位置を揃える　６０分
-
-SPA化　１２０分
-
-デプロイ　６０分
