簡易簿記ユーザーの追加

--- a/TODO
+++ b/TODO
@@ -1,27 +1,67 @@
-テーブルが文字数で崩れないように編集
+
+
+【機能】
+お知らせ　メッセージ　１２０分
+
+管理画面　お知らせ編集　１２０分
+
+管理画面　仕分け項目追加　１２０分
+
+お問い合わせ画面、自分のメールアドレスまで　３００分
+
+★控除入力画面　簡易簿記ユーザーの場合の制御（青色申告入力不可）　６０分
+
+検索機能追加　１２０分
+
+☆★ログイン画面、分岐、選択をセレクトボックス　３００分
+
+Seederダミーデータ　１２０分
+
+仕様の説明画面　１８０分
+
+
+【レイアウト】
+
+ヘッダー　記入系をドロップダウンにまとめる　１２０分
 
 レスポンシブ対応
 
-Tax.jsxのレイアウト調整
+ヘッダーとコンテンツの幅をそろえる　３０分
 
-検索機能追加
+ヘッダーコンポーネント　項目数を増やせるよう調整　１２０分
 
-404画面の追加
+404画面の追加　１８０分
 
-レイアウト変更　入力位置を揃える　６０分
+ＳＰ画面からテーブルの一覧を表示する際は項目数を減らす　１２０分
 
-SPA化　１２０分
-
-デプロイ　３００時間
+テーブルの幅を固定する。（vwで幅には可変。文字数では不可変）　６０分
 
 
-; HeaderLayoutを追加する　１５分
-; →2024年10月23日
+【低い優先】
 
-; 認証機能の追加　１２０分
-; →2024年10月24日
-; →マイグレーションファイルを編集しroleカラムを追加
-; →コントローラーとルートのみ編集し、UIは変えていない
+左と右の金額が一緒でないといけないバリデーションの追加
+
+複式簿記画面のPC画面の際、貸方借方の行の下に「追加ボタン」と合計行を追加する。
+さらに、貸方名と貸方金額が縦に並んでいるものを横に並べる。（借方も同様にし、１行で４列入るように修正）
+
+複式簿記画面のＳＰ画面の際は上記の「追加ボタン」を消す。
+簡易的な入力しかできないようにする。
+
+
+; ☆★簡易簿記ユーザー画面　１２０分
+; →2024年11月3日
+
+; レイアウト変更　入力位置を揃える　６０分
+; →2024年11月2日
+
+; Tax.jsxのレイアウト調整　１２０分
+; →2024年11月2日
+
+; デプロイ　３００時間
+; →2024年11月2日
+
+; テーブルが文字数で崩れないように編集
+; →2024年11月2日
 
 ; 登録処理の追加、ユーザーに紐づいたデータをテーブルで一覧表示　１２０分
 ; →2024年10月26日
@@ -35,4 +75,10 @@ SPA化　１２０分
 ; ページャー追加
 ; →2024年10月26日
 
+; 認証機能の追加　１２０分
+; →2024年10月24日
+; →マイグレーションファイルを編集しroleカラムを追加
+; →コントローラーとルートのみ編集し、UIは変えていない
 
+; HeaderLayoutを追加する　１５分
+; →2024年10月23日
