簡易簿記登録処理実装

--- a/TODO
+++ b/TODO
@@ -13,18 +13,19 @@
 
 検索機能追加　１２０分
 
-☆★ログイン画面、分岐、選択をセレクトボックス　３００分
-
 Seederダミーデータ　１２０分
 
 仕様の説明画面　１８０分
 
+DB設計見直し　３００分
 
 【レイアウト】
 
+ページングを日本語に　３０分
+
 ヘッダー　記入系をドロップダウンにまとめる　１２０分
 
-レスポンシブ対応
+レスポンシブ対応　ハンバーガーメニュー　６０分
 
 ヘッダーとコンテンツの幅をそろえる　３０分
 
@@ -47,6 +48,8 @@ Seederダミーデータ　１２０分
 複式簿記画面のＳＰ画面の際は上記の「追加ボタン」を消す。
 簡易的な入力しかできないようにする。
 
+; ☆★ログイン画面、分岐、選択をセレクトボックス　３００分
+; →2024年11月3日
 
 ; ☆★簡易簿記ユーザー画面　１２０分
 ; →2024年11月3日
