控除roleで選択項目変える、name削除、Tax調整中

--- a/TODO
+++ b/TODO
@@ -9,15 +9,13 @@
 
 お問い合わせ画面、自分のメールアドレスまで　３００分
 
-★控除入力画面　簡易簿記ユーザーの場合の制御（青色申告入力不可）　６０分
-
 検索機能追加　１２０分
 
 Seederダミーデータ　１２０分
 
 仕様の説明画面　１８０分
 
-DB設計見直し　３００分
+金額を入力する際、電卓のように数字をクリックできるように　３０分
 
 【レイアウト】
 
@@ -47,6 +45,12 @@ DB設計見直し　３００分
 
 複式簿記画面のＳＰ画面の際は上記の「追加ボタン」を消す。
 簡易的な入力しかできないようにする。
+
+; ★☆控除入力画面　簡易簿記ユーザーの場合の制御（青色申告入力不可）　６０分
+; →2024年11月5日
+
+; DB設計見直し　３００分
+; →2024年11月3日
 
 ; ☆★ログイン画面、分岐、選択をセレクトボックス　３００分
 ; →2024年11月3日
