Tax画面　簡易簿記、複式簿記共通仕様

--- a/TODO
+++ b/TODO
@@ -17,6 +17,9 @@ Seederダミーデータ　１２０分
 
 金額を入力する際、電卓のように数字をクリックできるように　３０分
 
+簡易簿記ユーザーが収入と押下した時、売上げが自動でハマる仕様　１２０分
+
+
 【レイアウト】
 
 ページングを日本語に　３０分
@@ -45,6 +48,10 @@ Seederダミーデータ　１２０分
 
 複式簿記画面のＳＰ画面の際は上記の「追加ボタン」を消す。
 簡易的な入力しかできないようにする。
+
+delete_flagの作成
+
+; Tax画面　簡易簿記、複式簿記共通で使えるようにする　１２０分
 
 ; ★☆控除入力画面　簡易簿記ユーザーの場合の制御（青色申告入力不可）　６０分
 ; →2024年11月5日
