金額一致バリ、収入支出で選択制御(簡易簿記)

--- a/TODO
+++ b/TODO
@@ -15,9 +15,11 @@ Seederダミーデータ　１２０分
 
 仕様の説明画面　１８０分
 
-金額を入力する際、電卓のように数字をクリックできるように　３０分
+☆金額を入力する際、電卓のように数字をクリックできるように１２０分
 
-簡易簿記ユーザーが収入と押下した時、売上げが自動でハマる仕様　１２０分
+
+
+
 
 
 【レイアウト】
@@ -41,7 +43,6 @@ Seederダミーデータ　１２０分
 
 【低い優先】
 
-左と右の金額が一緒でないといけないバリデーションの追加
 
 複式簿記画面のPC画面の際、貸方借方の行の下に「追加ボタン」と合計行を追加する。
 さらに、貸方名と貸方金額が縦に並んでいるものを横に並べる。（借方も同様にし、１行で４列入るように修正）
@@ -50,6 +51,15 @@ Seederダミーデータ　１２０分
 簡易的な入力しかできないようにする。
 
 delete_flagの作成
+
+; ☆簡易簿記ユーザーが収入と押下した時、売上げが自動でハマる仕様　１２０分
+; →2024年11月13日
+
+; ☆合計が一致の際のみ登録バリデーション　１５分
+; →2024年11月13日
+
+; 簡易簿記、テーブル定義変更による更新処理の調整　６０分
+
 
 ; Tax画面　簡易簿記、複式簿記共通で使えるようにする　１２０分
 
