ダミーデータ、Taxの調整

--- a/TODO
+++ b/TODO
@@ -11,13 +11,10 @@
 
 検索機能追加　１２０分
 
-Seederダミーデータ　１２０分
 
 仕様の説明画面　１８０分
 
 ☆金額を入力する際、電卓のように数字をクリックできるように１２０分
-
-
 
 
 
@@ -51,6 +48,9 @@ Seederダミーデータ　１２０分
 簡易的な入力しかできないようにする。
 
 delete_flagの作成
+
+; Seederダミーデータ　１２０分
+; →2024年11月14日
 
 ; ☆簡易簿記ユーザーが収入と押下した時、売上げが自動でハマる仕様　１２０分
 ; →2024年11月13日
